--- a/app/src/main/res/layout/activity_personal.xml
+++ b/app/src/main/res/layout/activity_personal.xml
@@ -33,7 +33,7 @@
                 android:textColor="@color/text_333"
                 android:textSize="16sp" />
 
-            <de.hdodenhof.circleimageview.CircleImageView
+            <com.leew.biker.view.CircleImageView
                 android:id="@+id/head"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
