--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -17,7 +17,7 @@
         android:background="@color/white"
         android:orientation="vertical">
 
-        <com.xw.repo.XEditText
+        <com.leew.biker.view.XEditText
             android:id="@+id/et_username"
             android:layout_width="match_parent"
             android:layout_height="40dp"
@@ -43,7 +43,7 @@
             android:layout_marginRight="30dp"
             android:background="#cccccc" />
 
-        <com.xw.repo.XEditText
+        <com.leew.biker.view.XEditText
             android:id="@+id/et_passWord"
             android:layout_width="match_parent"
             android:layout_height="40dp"
@@ -78,7 +78,7 @@
             android:layout_marginRight="30dp"
             android:orientation="horizontal">
 
-            <com.xw.repo.XEditText
+            <com.leew.biker.view.XEditText
                 android:id="@+id/et_verify_code"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
