--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -59,7 +59,7 @@
                     android:layout_weight="1"
                     android:layout_marginTop="10dp">
 
-                    <de.hdodenhof.circleimageview.CircleImageView
+                    <com.leew.biker.view.CircleImageView
                         android:id="@+id/user_head"
                         android:layout_width="70dp"
                         android:layout_height="70dp"
